# lib-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  delivery.yml  deployment.yml  integration.yml  release.yml
src/lib_ml/: __init__.py  c1_BoW_Sentiment_Model.pkl  placeholder.py  preprocessing.py  processor.py
src/test/: test_preprocessing.py
