[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_ml"
authors = [
    {name = "Jorn Dijk", email = "dijkjorn@gmail.com"}
]
description = "Preprocessing library for restaurant sentiment analysis."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "pandas>=1.3",       
    "nltk>=3.6",         
]

[tool.setuptools_scm]
write_to = "src/lib_ml/_version.py"