[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lib_ml"
authors = [
    {name = "Jorn Dijk", email = "dijkjorn@gmail.com"},
    {name = "Kristóf Sándor"}
]
description = "Preprocessing library for restaurant sentiment analysis."
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools_scm]
tag_regex = "^(?P<version>v[0-9]+(?:\\.[0-9]+)*[^\\s]*?)$"